--- a/templates/cart.html
+++ b/templates/cart.html
@@ -2,45 +2,36 @@
 {% extends 'base.html' %}
 
 {% block body %}
+{#<!-- 
+  {% for melon in melon_list %}
+    <td>{{ common_name }}</td>
+    <td>{{ melon.price }}</td>
+
+  {% endfor %}
+    -->#}
 
     <table class="table table-striped">
         <thead>
-        <tr>
-            <th>Melon Name</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Total</th>
-        </tr>
+            <tr>
+                <th>Melon Name</th>
+                <th>Quantity</th>
+                <th>Price</th>
+                <th>Total</th>
+            </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Ancient Watermelon</td>
-            <td>5</td>
-            <td>$3.00</td>
-            <td>$15.00</td>
-        </tr>
-        <tr>
-            <td>Charleston Gray</td>
-            <td>2</td>
-            <td>$2.00</td>
-            <td>$4.00</td>
-        </tr>
-        <tr>
-            <td>Crenshaw</td>
-            <td>1</td>
-            <td>$2.00</td>
-            <td>$2.00</td>
-        </tr>
-        <tr>
-            <td>Ledmon Watermelon</td>
-            <td>2</td>
-            <td>$3.00</td>
-            <td>$6.00</td>
-        </tr>
+            {% for melon in melon_list %}
+                <tr>
+                    <td>{{melon.common_name}}</td>
+                    <td></td>
+                    <td>{{melon.price}}</td>
+                    <td></td>
+                </tr>
+            {% endfor %}
         </tbody>
     </table>
 
-    <h3>Total: $27.00</h3>
+    <h3>Total: {{order_total}} </h3>
 
     <a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
 
